--- a/package.json
+++ b/package.json
@@ -6,10 +6,11 @@
   "private": true,
   "main": "main.js",
   "dependencies": {
+    "@exponent/ex-navigation": "^2.7.1",
     "@exponent/vector-icons": "^1.0.4",
-    "exponent": "~11.0.0",
+    "exponent": "~12.0.0",
     "react": "~15.3.2",
-    "react-native": "github:exponentjs/react-native#sdk-11.0.0",
+    "react-native": "github:exponentjs/react-native#sdk-12.0.0",
     "react-native-datepicker": "^1.4.3",
     "react-native-globalize": "^0.7.0",
     "react-native-pathjs-charts": "~0.0.21"
