--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react": "~15.3.2",
     "react-native": "github:exponentjs/react-native#sdk-12.0.0",
     "react-native-datepicker": "^1.4.3",
+    "react-native-db-models": "^0.1.3",
     "react-native-globalize": "^0.7.0",
     "react-native-keyboard-aware-scroll-view": "^0.2.6",
     "react-native-pathjs-charts": "~0.0.21"
