--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "react-native-db-models": "^0.1.3",
     "react-native-globalize": "^0.7.0",
     "react-native-keyboard-aware-scroll-view": "^0.2.6",
-    "react-native-pathjs-charts": "~0.0.21"
+    "react-native-pathjs-charts": "~0.0.21",
+    "react-native-picker-xg": "0.0.8"
   },
   "devDependencies": {
     "flow-bin": "^0.34.0"
