--- a/package.json
+++ b/package.json
@@ -8,17 +8,17 @@
   "dependencies": {
     "@exponent/ex-navigation": "^2.7.1",
     "@exponent/vector-icons": "^1.0.4",
-    "exponent": "~12.0.0",
-    "react": "~15.3.2",
-    "react-native": "github:exponentjs/react-native#sdk-12.0.0",
+    "exponent": "^13.1.0",
+    "react": "~15.4.0",
+    "react-native": "https://github.com/exponent/react-native/archive/sdk-13.0.3.tar.gz",
     "react-native-datepicker": "^1.4.3",
     "react-native-db-models": "^0.1.3",
-    "react-native-globalize": "^0.7.0",
+    "react-native-globalize": "^0.9.0",
     "react-native-keyboard-aware-scroll-view": "^0.2.6",
-    "react-native-pathjs-charts": "~0.0.21",
-    "react-native-picker-xg": "0.0.8"
+    "react-native-pathjs-charts": "~0.0.24"
   },
   "devDependencies": {
+    "babel-polyfill": "^6.22.0",
     "flow-bin": "^0.34.0"
   }
 }
